--- a/index.html
+++ b/index.html
@@ -7411,10 +7411,12 @@ function setRandomLoginBackground() {
   const backgroundImages = [
     'cork_city_hall_night.jpg',
     'cork_city_hall_night.jpg.jpg',
-    'cork-city-council-logo.jpg',
-    'cork-city-council-logo.jpeg',
-    'cork-city-council-logo.png.jpeg',
-    'idwlauxnya_1751188773241.jpeg'
+    'city_hall_day_1.jpg',
+    'city_hall_day_2.jpg',
+    'city_hall_day_3.jpg',
+    'city_hall_day_4.jpg',
+    'city_hall_day_5.jpg',
+    'city_hall_day_6.jpg'
   ];
   
   // Randomly select an image
