--- a/index.html
+++ b/index.html
@@ -6959,7 +6959,7 @@ async function loadInnerBoundariesOnly() {
           // Define colors matching the ArcGIS map
           const electoralAreaColors = {
             'CORK CITY NORTH WEST LEA-6': '#2196F3',  // Blue
-            'CORK CITY NORTH EAST LEA-6': '#F44336',  // Red  
+            'CORK CITY NORTH EAST LEA-6': '#B71C1C',  // Red  
             'CORK CITY SOUTH WEST LEA-7': '#FF9800',  // Orange
             'CORK CITY SOUTH EAST LEA-6': '#9C27B0',  // Purple
             'CORK CITY SOUTH CENTRAL LEA-6': '#4CAF50' // Green (center)
