--- a/index.html
+++ b/index.html
@@ -10543,5 +10543,12 @@ function exportAuditHistoryAsCSV(entries, filenamePrefix) {
 }
 
 </script>
+
+<!-- Enhanced Photo Upload Script -->
+<script src="enhanced-photo-upload.js"></script>
+
+<!-- Storage Test Script -->
+<script src="test-storage.js"></script>
+
 </body>
 </html>
