--- a/index.html
+++ b/index.html
@@ -2631,7 +2631,7 @@ const firebaseConfig = {
   authDomain: "gullytest3.firebaseapp.com",
   databaseURL: "https://gullytest3-default-rtdb.europe-west1.firebasedatabase.app",
   projectId: "gullytest3",
-  storageBucket: "gullytest3.appspot.com",
+  storageBucket: "gullytest3.firebasestorage.app",
   messagingSenderId: "876083677912",
   appId: "1:876083677912:web:065de0c7cca446b78f65ad"
 };
