--- a/index.html
+++ b/index.html
@@ -2916,6 +2916,22 @@ const USER_CONFIG = {
       name: 'Martin McCormick',
       initials: 'MM',
       isAdmin: false
+    },
+    // Added Serena O'Connor
+    {
+      email: 'serena_oconnor@corkcity.ie',
+      role: 'admin',
+      name: 'Serena O\'Connor',
+      initials: 'SO',
+      isAdmin: true,
+      adminPrivileges: {
+        canDelete: true,
+        canEdit: true,
+        canImport: true,
+        canExport: true,
+        canReset: true,
+        canManageUsers: true
+      }
     }
   ]
 };
@@ -2941,7 +2957,12 @@ function validateAndNormalizeEmail(email) {
     'nankushwaha@corkcity.ie',
     'richard_daly@corkcity.ie',
     'richard.daly@corkcity.ie',
-    'richarddaly@corkcity.ie'
+    'richarddaly@corkcity.ie',
+    'serena_oconnor@corkcity.ie',
+    'serena.oconnor@corkcity.ie',
+    'serena_o_connor@corkcity.ie',
+    'serena.o.connor@corkcity.ie',
+    'serenaoconnor@corkcity.ie'
   ];
   
   // Operator email variations
@@ -2973,6 +2994,8 @@ function validateAndNormalizeEmail(email) {
       adminUser = USER_CONFIG.users[1];
     } else if (['richard_daly@corkcity.ie','richard.daly@corkcity.ie','richarddaly@corkcity.ie'].some(variant => email.replace(/[._]/g, '').toLowerCase() === variant.replace(/[._]/g, '').toLowerCase())) {
       adminUser = USER_CONFIG.users[2];
+    } else if (['serena_oconnor@corkcity.ie','serena.oconnor@corkcity.ie','serena_o_connor@corkcity.ie','serena.o.connor@corkcity.ie','serenaoconnor@corkcity.ie'].some(variant => email.replace(/[._]/g, '').toLowerCase() === variant.replace(/[._]/g, '').toLowerCase())) {
+      adminUser = USER_CONFIG.users[4];
     }
     return {
       isValid: true,
