--- a/index.html
+++ b/index.html
@@ -768,6 +768,7 @@
   align-items: center;
   justify-content: center;
 }
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -2967,6 +2968,7 @@ const USER_CONFIG = {
       name: 'Serena O\'Connor',
       initials: 'SO',
       isAdmin: true,
+      uid: 'D8dFOiXupcfVUikt9uwcOlmYtCy1',
       adminPrivileges: {
         canDelete: true,
         canEdit: true,
