--- a/index.html
+++ b/index.html
@@ -2988,6 +2988,15 @@ const USER_CONFIG = {
         canReset: true,
         canManageUsers: true
       }
+    },
+    // Added Nicola Celino
+    {
+      email: 'nicola_celino@corkcity.ie',
+      role: 'operator',
+      name: 'Nicola Celino',
+      initials: 'NC',
+      isAdmin: false,
+      uid: 'dlgKruH9GoYxZEyWr7T0lTtBzyp2'
     }
   ]
 };
@@ -3037,7 +3046,12 @@ function validateAndNormalizeEmail(email) {
     'john.ocallaghan@corkcity.ie',
     'john_o_callaghan@corkcity.ie',
     'john.o.callaghan@corkcity.ie',
-    'johnocallaghan@corkcity.ie'
+    'johnocallaghan@corkcity.ie',
+    // Add Nicola Celino variations
+    'nicola_celino@corkcity.ie',
+    'nicola.celino@corkcity.ie',
+    'nicola_celino@corkcity.ie',
+    'nicolacelino@corkcity.ie'
   ];
   
   // Viewer email variations
